--- a/index.ipynb
+++ b/index.ipynb
@@ -741,7 +741,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    \n",
+    "    return m * x_value + b\n",
     "    pass"
    ]
   },
