automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -822,8 +822,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# comedy_show_trace = trace_values(show_x_values, show_y_values, name = 'comedy show data')\n",
-    "# comedy_show_trace"
+    "comedy_show_trace = trace_values(show_x_values, show_y_values, name = 'comedy show data')\n",
+    "comedy_show_trace"
    ]
   },
   {
@@ -832,8 +832,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show_starting_line = build_starting_line(show_x_values, show_y_values)\n",
-    "# show_starting_line"
+    "show_starting_line = build_starting_line(show_x_values, show_y_values)\n",
+    "show_starting_line"
    ]
   },
   {
@@ -842,7 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
+    "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
   },
   {
